# rust-enum

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
.github/workflow/: gtest.yml
.github/workflows/: clang-format-check.yml
cmake/: AddTarget.cmake  CheckGoogleTest.cmake  ClangFormat.cmake  RunClangFormat.cmake
src/: CMakeLists.txt
unittest/: CMakeLists.txt  dummy_test.cpp  variant_test.cpp
unittest/tuple/: CMakeLists.txt  dummy.cpp
unittest/variant/: CMakeLists.txt  bad_variant_access_test.cpp  big_variant_test.cpp  common.hpp  comparison_test.cpp  comparison_three_way_test.cpp  destructor_test.cpp  get_if_test.cpp  get_test.cpp  holds_alternative_test.cpp  index_test.cpp  monostate_test.cpp  p0608r3_test.cpp  swap_test.cpp  valueless_by_exception_test.cpp  valueless_strategy_test_helper.hpp  variant_alternative_test.cpp  variant_size_test.cpp
unittest/variant/assignment_test/: converting_assignment_test.cpp  copy_assignment_test.cpp  move_assignment_test.cpp
unittest/variant/constructor_test/: converting_constructor_test.cpp  copy_constructor_test.cpp  default_constructor_test.cpp  in_place_index_constructor_test.cpp  in_place_index_init_list_constructor_test.cpp  in_place_type_constructor_test.cpp  in_place_type_init_list_constructor_test.cpp  move_constructor_test.cpp
unittest/variant/emplace_test/: emplace_test_helper.hpp  index_emplace_test.cpp  index_init_list_emplace_test.cpp  type_emplace_test.cpp  type_init_list_emplace_test.cpp
unittest/variant/visit_test/: p2162r2_test.cpp  return_visit_test.cpp  visit_test.cpp  visit_test_helper.hpp
(+65 files in other folders)
